--- a/src/composer.json
+++ b/src/composer.json
@@ -4,5 +4,9 @@
         "psr-4":{
             "App\\": "app/"
         }
+    },
+    "require": {
+        "guzzlehttp/guzzle": "^7.9",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
