--- a/src/composer.json
+++ b/src/composer.json
@@ -7,6 +7,7 @@
     },
     "require": {
         "guzzlehttp/guzzle": "^7.9",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "spatie/browsershot": "^5.0"
     }
 }
