#Daniel - Adjust: Gitignore ajustado.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 .env
 
 # Ignorar diretórios e arquivos específicos
-# .vscode/
-# src/vendor/
-# src/node_modules/
+.vscode/
+src/vendor/
+src/node_modules/
